    comparing category indices.  JSON serialization/deserialization munges
    type, and triple-equals comparisons don't work as expected.
    
    * app/assistants/item-list-assistant.js (setCategory, filterItems): Use
    double-equals instead of triple to get type coercion.
    (ItemListAssistant): Initialize this.category to ring.prefs.category
    to avoid extra work on activate().

    * app/assistants/item-assistant.js (setup): Adjust to new signature of
    ring.categoriesForMojo();
    
    * app/assistants/categories-assistant.js (categoryAdded): Update to handle
    alpha sorted categories list.

	* resources: Add German and Mexican Spanish translations, courtesy of
	Daniel Saat and Alberto Dominguez.

2010-04-14  Dirk Bergstrom  <krid@otisbean.com>

    * app/models/ring.js (FIELD_NAME_L10N): Localizable display names for
    item fields.
    
    * app/assistants/item-assistant.js (setup): Use ring.FIELD_NAME_L10N.
    
    * app/assistants/item-list-assistant.js (handleCommand): L10N for "Edit
    Categories".

2010-04-03  Dirk Bergstrom  <krid@otisbean.com>

	* README-translations.txt: Expand and clarify instructions.

    * app/*/*.js: Many minor changes to fix errors and warnings from JSLint.

	* appinfo.json: Add splashBackground entry.
	
	* images/splash-screen.png: Splash screen for webOS 1.4 startup experience.
	
	* dev-only: Directory to hold files that won't be included in the .ipk.
	Currently has the SVG source for the icon.

	* package.sh: Exclude dev-only directory.
	
2010-03-31  Dirk Bergstrom  <krid@otisbean.com>

	* app/assistants/actions-assistant.js: Change import/export to restore/
	backup, since that better reflects usage.  Import and export are really
	handled by the desktop client.

    * app/models/ring.js (resolutions): s/imported/restored, and change
    "newer" to "newest" for clarity.

	* app/views/actions/actions-scene.html: Change import/export to restore/
	backup.
